# games

./: CMakeLists.txt  LICENSE.md  README.md
01-brickbreaker/: README.md
01-brickbreaker/src/: README.md  brickbreaker.cpp
01-brickbreaker/src/brickbreaker/: Circle.hpp  CollisionManager.hpp  Game.hpp  Paddle.hpp  Rectangle.hpp  make_unique.hpp
02-pong/: README.md
02-pong/src/: pong.cpp
02-pong/src/pong/: Ball.hpp  Circle.hpp  CollisionManager.hpp  Entity.hpp  Game.hpp  Globals.cpp  Globals.hpp  Manager.hpp  Paddle.hpp  Rectangle.hpp
03-game-of-life/: README.md
03-game-of-life/src/: life.cpp
03-game-of-life/src/game-of-life/: Game.hpp  Globals.hpp
brickbreaker/src/brickbreaker/: Ball.hpp  Brick.hpp  Entity.hpp  Game.hpp  Manager.hpp
